fix workflow icon alignment in stix-list

--- a/app/src/app/components/stix/workflow-property/workflow-property.component.scss
+++ b/app/src/app/components/stix/workflow-property/workflow-property.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../style/globals.scss';
+.mat-icon { vertical-align: middle; }
 .warn { color: color(warn); }
 .error { color: color(error); }
 .success { color: color(success); }
